# SaaS-Bot

./: .env.example  .replit  pnpm-lock.yaml  pyproject.toml  render.yaml  replit.md  skills-lock.json
.github/workflows/: gemini.yml
apps/backend/: alembic.ini  flow_engine.py  flow_executor.py  requirements.txt
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_initial_schema.py  002_add_customers_table.py  (+3 more)
apps/backend/app/: config.py  database.py  main.py
apps/backend/core/: billing.py  limits.py  plans.py  queue.py  security.py
apps/backend/models/: bot_config.py  broadcast.py  business.py  category.py  customer.py  flow.py  order.py  payment.py  product.py  session.py  store.py  subscription.py
apps/backend/routes/: ai.py  analytics.py  auth.py  billing.py  broadcasts.py  customers.py  customers_route.py  flows.py  payments.py  products.py  routes_bots.py  stores.py
apps/backend/services/: analytics_service.py  domain_service.py  order_service.py  storefront_service.py
apps/backend/workers/: broadcast_worker.py  flow_jobs.py  payment_jobs.py  subscription_jobs.py  tasks.py
apps/worker/: worker.py
artifacts/frontend/: index.html  package.json
artifacts/frontend/.replit-artifact/: artifact.toml
artifacts/frontend/src/: App.tsx  index.css
attached_assets/: SaaS_Bot_Architecture_(1)_354e8960874e801a8b9df04016e044a0_1777735904966.md  bot_config_1777834523397.py  context_1777834523341.py  dispatch_1777834523365.py  migration_bot_configs_1777834523295.py  telegram_client_1777834523381.py
infra/: docker-compose.yml
(+41 files in other folders)
