[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "cryptography==43.0.3",
    "fastapi==0.115.5",
    "greenlet==3.1.1",
    "httpx==0.28.1",
    "openai==1.57.4",
    "passlib[bcrypt]==1.7.4",
    "pydantic-settings==2.6.1",
    "pydantic[email]==2.10.3",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.18",
    "redis==5.2.1",
    "rq==2.0.0",
    "sqlalchemy[asyncio]==2.0.36",
    "stripe==11.3.0",
    "uvicorn[standard]==0.32.1",
]
